Add bins, javadocs updates, logging info, difficulty hard default